refactor(social-links): Add hover animations to social link icons for enhanced interactivity

--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
       <div class="social-links">
         <a href="https://x.com/aqeell_sheikh">
           <img
+          class="socialLink"
             src="static/images/social/twitter-x.svg"
             alt="X (formely twitter)"
           />
         </a>
         <a href="https://github.com/aqeel-sheikh/">
-          <img src="static/images/social/github.svg" alt="Github" />
+          <img class="socialLink" src="static/images/social/github.svg" alt="Github" />
         </a>
         <a
           href="https://mail.google.com/mail/?view=cm&fs=1&to=sheikhakeelw01@gmail.com&su=Opportunity%20to%20Collaborate%20%2F%20Hire&body=Hello%20Aqeel,%0D%0A%0D%0AI%20came%20across%20your%20profile%20and%20I%20am%20interested%20in%20discussing%20a%20potential%20opportunity%20with%20you.%0D%0A%0D%0APlease%20let%20me%20know%20a%20convenient%20time%20to%20connect.%0D%0A%0D%0AThank%20you,%0D%0A[Your%20Name]%0D%0A[Your%20Company/Organization]"
           target="_blank"
         >
-          <img src="static/images/social/gmail.svg" alt="Gmail" />
+          <img class="socialLink" src="static/images/social/gmail.svg" alt="Gmail" />
         </a>
       </div>
     </header>  
