--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- Section 1 -->
-     <header class="section" id="section1">
+    <header class="section" id="section1">
       <p id="logo">SCROLL SCAPE</p>
       <h1 class="title" id="section1-title">WELCOME TO MY WEB DEV JOURNEY</h1>
       <p id="section1-tagline">
@@ -22,25 +22,33 @@
       <div class="social-links">
         <a href="https://x.com/aqeell_sheikh">
           <img
-          class="socialLink"
+            class="socialLink"
             src="static/images/social/twitter-x.svg"
             alt="X (formely twitter)"
           />
         </a>
         <a href="https://github.com/aqeel-sheikh/">
-          <img class="socialLink" src="static/images/social/github.svg" alt="Github" />
+          <img
+            class="socialLink"
+            src="static/images/social/github.svg"
+            alt="Github"
+          />
         </a>
         <a
           href="https://mail.google.com/mail/?view=cm&fs=1&to=sheikhakeelw01@gmail.com&su=Opportunity%20to%20Collaborate%20%2F%20Hire&body=Hello%20Aqeel,%0D%0A%0D%0AI%20came%20across%20your%20profile%20and%20I%20am%20interested%20in%20discussing%20a%20potential%20opportunity%20with%20you.%0D%0A%0D%0APlease%20let%20me%20know%20a%20convenient%20time%20to%20connect.%0D%0A%0D%0AThank%20you,%0D%0A[Your%20Name]%0D%0A[Your%20Company/Organization]"
           target="_blank"
         >
-          <img class="socialLink" src="static/images/social/gmail.svg" alt="Gmail" />
+          <img
+            class="socialLink"
+            src="static/images/social/gmail.svg"
+            alt="Gmail"
+          />
         </a>
       </div>
-    </header>  
-   <div class="wrapper"> 
+    </header>
+    <div class="wrapper">
       <!-- Section 2 -->
-        <section class="section" id="section2">
+      <section class="section" id="section2">
         <div class="section-heading" id="section2-heading">
           <h1 class="title" id="section2-title">THE BEGINNING</h1>
         </div>
@@ -54,9 +62,9 @@
             So I went back to what always made sense to me: COMPUTERS.
           </p>
         </div>
-      </section>  
+      </section>
       <!-- Section 3 -->
-        <section class="section scrollPanel" id="section3">
+      <section class="section scrollPanel" id="section3">
         <div class="section-heading" id="section3-heading">
           <h1 class="title" id="section3-title">THE STRUGGLES</h1>
           <p class="tagline" id="section3-tagline">
@@ -95,10 +103,10 @@
           <span>“Why isn't this working?!” moments</span>
         </p>
         <p class="card card15"><span>Depression</span></p>
-      </section> 
+      </section>
 
       <!-- Section 4 -->
-       <section class="section scrollPanel" id="section4">
+      <section class="section scrollPanel" id="section4">
         <div class="section-heading" id="section4-heading">
           <h1 class="title" id="section4-title">THE RISE</h1>
           <p class="tagline section4-tagline section4-tagline1">
@@ -134,24 +142,26 @@
         <p class="card Rcard6"><span>Curosity</span></p>
         <p class="card Rcard7"><span>Progress</span></p>
         <p class="card Rcard8"><span>Confidence</span></p>
-      </section> 
+      </section>
 
       <!-- Section 5 -->
-       <section class="section scrollPanel" id="section5">
+      <section class="section scrollPanel" id="section5">
         <div class="section-heading" id="section5-heading">
           <h1 class="title" id="section5-title">THE VISION</h1>
         </div>
-        <div class="vision-horizon"></div>
-        <div class="narrative-card" id="section5-narrative-card">
-          <p class="narrative-card-text" id="section5-narrative-card-text">
-            I don't have all the answers yet. But I know one thing — I'll keep
-            learning, building, and moving forward. For me, this isn't just
-            about coding. It's about freedom. About creating something that
-            lasts. This is where I'm heading — <strong>my vision</strong>
-          </p>
+        <div class="contain">
+          <div class="narrative-card" id="section5-narrative-card">
+            <div class="shine"></div>
+            <p class="narrative-card-text" id="section5-narrative-card-text">
+              I don't have all the answers yet. But I know one thing — I'll keep
+              learning, building, and moving forward. For me, this isn't just
+              about coding. It's about freedom. About creating something that
+              lasts. This is where I'm heading — <strong>my vision</strong>.
+            </p>
+          </div>
         </div>
-      </section> 
-     </div> 
+      </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="js/lottie.js"></script>
